[build-system]
requires = [ "setuptools>=69.0" ]
build-backend = "setuptools.build_meta"

[project]
name = "hip-flask"
dynamic = [ "version" ] 
authors = [
  { name="Jonathan Cormier", email="jonathan@cormier.co" },
]
description = "Lightweight Flask extension to simplify the integration of CSS and JavaScript files into your applications"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "Flask"
]

[project.urls]
Homepage = "https://github.com/rancorm/hip-flask"
Issues = "https://github.com/rancorm/hip-flask/issues"

[tool.setuptools.dynamic]
version = { attr = "hip_flask.__version__" }
